--- a/style/index.css
+++ b/style/index.css
@@ -33,8 +33,8 @@
       color: #00796b;
     }
 
-    p {
-      margin: 10px 0;
+    .container p {
+      text-align: justify;
     }
 
     .enter-btn {
